gitops/apps/kgateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: https
  namespace: kgateway-system
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.kubernetes.io/target: bealv.io
    kgateway.dev/per-connection-buffer-limit: "128Mi"
spec:
  gatewayClassName: kgateway
  allowedListeners:
    namespaces:
      from: All
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gwp-static-ip
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      hostname: "*.bealv.io"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.bealv.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: bealvio-wildcard-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: ignore
spec:
  parentRefs:
    - name: https
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
